Overflow mobile fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -327,3 +327,7 @@ a:hover {
   width: auto;
 
 }
+
+.overflow{
+  overflow-x: hidden !important;
+}
